--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     non-profit and senior operations sectors.</p>
                 <p class="intro">When our world changed drastically due to the COVID-19 pandemic, it was the catalyst
                     for me to pursue my passion and rethink my career. I enrolled in the Eleven Fifty Academy to hone in
-                    ony my web development skills.</p>
+                    on my web development skills.</p>
                 <p class="intro">I look forward to helping companies shine through their website.</p>
                 <br>
                 <!-- RESUME DOWNLOAD -->
