--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#aboutMe">ABOUT ME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                    <a class="nav-link" href="#portfolioTop">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#skills">SKILLS</a>
@@ -78,7 +78,7 @@
 
 
     <!-- PORTFOLIO -->
-    <h1 class="display-5">PORTFOLIO</h1>
+    <h1 class="display-5" id="portfolioTop">PORTFOLIO</h1>
     <br><br>
     <div class="portfolioContainer">
         <div class="row no-gutters">
@@ -256,7 +256,7 @@
                 <a class="footerLink" href="#aboutMe">ABOUT ME</a>
             </div>
             <div class="col">
-                <a class="footerLink" href="#portfolio">PORTFOLIO</a>
+                <a class="footerLink" href="#portfolioTop">PORTFOLIO</a>
             </div>
             <div class="col">
                 <a class="footerLink" href="#skills">SKILLS</a>
